Fix views overflow

--- a/app/style/main.css
+++ b/app/style/main.css
@@ -207,6 +207,7 @@ b {
 	width: 100%;
 	max-height: 100vh;
 	text-align: center;
+	overflow: scroll;
 }
 
 [data-view="editor"] .side-nav button {
@@ -515,7 +516,7 @@ b {
 	}
 
 	a {
-        color: #424242;
+        color: #000;
     }
 
 	[data-view="preview"] {
@@ -532,16 +533,22 @@ b {
 	body{
         overflow: visible;
         font-family: 'Arial', sans-serif;
-        font-size: 12pt;
+        font-size: 9pt;
+        color: #000;
     }
 
     h1 {
-        font-size: 14pt;
+        font-size: 12pt;
         margin: auto;
     }
 
-    h2, h3, h4, h5{
-        font-size: 12pt;
+    h2 {
+        font-size: 10.5pt;
+        margin: auto;
+    }
+
+    h3, h4, h5{
+        font-size: 9pt;
         font-weight: bold;
         margin: auto;
     }
@@ -553,12 +560,12 @@ b {
     }
 
     tr, td {
-		border: 1px solid #424242 !important;
+		border: 1px solid #000 !important;
 		padding: 0.5em;
 	}
 
 	hr {
-		color: #424242 !important;
+		color: #000 !important;
 	}
 
     code{
